assign/create a material while in sculpt mode + multiresolution modfier = blender crash #61837

Closed
opened 2019-02-22 06:26:50 +01:00 by Massimiliano Puliero · 10 comments

System Information
Operating system: win7 64
Graphics card: gtx 1070

Blender Version
Broken: 2.80.0-git.4d4ae491c809-windows64
Worked: 2.80.0-git.855b3e68ef27-windows64

Short description of error
assign or create a material while in sculpt mode + multiresolution modfier makes blender crash

Exact steps for others to reproduce the error
create a geometry >>> assign multiresolution modifier >>> subdivide a couple of time >>> while in sculpt mode, create e new material to reproduce the crash.

thank you

**System Information** Operating system: win7 64 Graphics card: gtx 1070 **Blender Version** Broken: 2.80.0-git.4d4ae491c809-windows64 Worked: 2.80.0-git.855b3e68ef27-windows64 **Short description of error** assign or create a material while in sculpt mode + multiresolution modfier makes blender crash **Exact steps for others to reproduce the error** create a geometry >>> assign multiresolution modifier >>> subdivide a couple of time >>> while in sculpt mode, create e new material to reproduce the crash. thank you

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-22 13:20:20 +01:00

BT:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000000000000000 in ?? ()
(gdb) bt
- 0  0x0000000000000000 in ?? ()
- 1  0x00007ffff5543cc7 in OpenSubdiv::v3_3_3::Far::TopologyRefiner::~TopologyRefiner (this=0x7fffce80e6a0, __in_chrg=<optimized out>)
    at /usr/src/debug/media-libs/opensubdiv-3.3.3/OpenSubdiv-3_3_3/opensubdiv/far/topologyRefiner.cpp:73
#2  0x0000555557b78bc1 in OpenSubdiv_TopologyRefinerInternal::~OpenSubdiv_TopologyRefinerInternal (this=<optimized out>, __in_chrg=<optimized out>)
    at /home/zed/programmering/blender_master/blender/intern/opensubdiv/internal/opensubdiv_topology_refiner_internal.cc:25
#3  0x0000555557b7819a in openSubdiv_deleteTopologyRefiner (topology_refiner=0x7fffccf1ca68)
    at /home/zed/programmering/blender_master/blender/intern/opensubdiv/internal/opensubdiv_topology_refiner.cc:245
#4  0x00005555569a87a5 in BKE_subdiv_free (subdiv=0x7fffce83f548)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv.c:201
#5  0x00005555569a9842 in BKE_subdiv_ccg_destroy (subdiv_ccg=0x7fffcd6c00c8)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:659
#6  0x0000555556905be1 in BKE_mesh_runtime_clear_geometry (mesh=mesh@entry=0x7fffcf6c7c08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh_runtime.c:210
#7  0x0000555556905c49 in BKE_mesh_runtime_clear_cache (mesh=mesh@entry=0x7fffcf6c7c08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh_runtime.c:72
#8  0x00005555568ecc53 in BKE_mesh_free (me=me@entry=0x7fffcf6c7c08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:464
#9  0x0000555556923c94 in BKE_object_free_derived_caches (ob=ob@entry=0x7fffe3fca408)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object.c:467
#10 0x0000555556bd5b69 in DEG::deg_restore_object_runtime (object_runtime_backup=0x7fffffffd8a0, object=0x7fffe3fca408)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:851
#11 DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffe3fb9b08, id_node=0x7fffd84eae88)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:956
#12 0x0000555556bd4536 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (__args#0=<optimized out>, this=0x7fffd84eac00)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:682
#13 DEG::deg_task_run_func (pool=0x7fffcc3b6008, taskdata=0x7fffd84eab88, thread_id=0)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88
#14 0x0000555556bb5d74 in handle_local_queue (thread_id=0, tls=0x7fffd8677018)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417
- 15 BLI_task_pool_work_and_wait (pool=0x7fffcc3b6008) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:904
- 16 0x0000555556bb5e39 in BLI_task_pool_work_wait_and_reset (pool=pool@entry=0x7fffcc3b6008)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:925
#17 0x0000555556bd47ab in DEG::deg_evaluate_on_refresh (graph=graph@entry=0x7fffe3fb9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:317
#18 0x0000555556bc0bc8 in DEG_evaluate_on_refresh (graph=graph@entry=0x7fffe3fb9b08)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:63
#19 0x000055555696b277 in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffe3fb9b08, bmain=bmain@entry=0x7fffe9fed608)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1497
#20 0x000055555610d7d8 in wm_event_do_depsgraph (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341
#21 0x000055555610d875 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366
#22 0x000055555611422a in wm_event_do_notifiers (C=C@entry=0x7fffea058188)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524
- 23 0x000055555610a1b8 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421
- 24 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
BT: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000000000000000 in ?? () (gdb) bt - 0 0x0000000000000000 in ?? () - 1 0x00007ffff5543cc7 in OpenSubdiv::v3_3_3::Far::TopologyRefiner::~TopologyRefiner (this=0x7fffce80e6a0, __in_chrg=<optimized out>) at /usr/src/debug/media-libs/opensubdiv-3.3.3/OpenSubdiv-3_3_3/opensubdiv/far/topologyRefiner.cpp:73 #2 0x0000555557b78bc1 in OpenSubdiv_TopologyRefinerInternal::~OpenSubdiv_TopologyRefinerInternal (this=<optimized out>, __in_chrg=<optimized out>) at /home/zed/programmering/blender_master/blender/intern/opensubdiv/internal/opensubdiv_topology_refiner_internal.cc:25 #3 0x0000555557b7819a in openSubdiv_deleteTopologyRefiner (topology_refiner=0x7fffccf1ca68) at /home/zed/programmering/blender_master/blender/intern/opensubdiv/internal/opensubdiv_topology_refiner.cc:245 #4 0x00005555569a87a5 in BKE_subdiv_free (subdiv=0x7fffce83f548) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv.c:201 #5 0x00005555569a9842 in BKE_subdiv_ccg_destroy (subdiv_ccg=0x7fffcd6c00c8) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_ccg.c:659 #6 0x0000555556905be1 in BKE_mesh_runtime_clear_geometry (mesh=mesh@entry=0x7fffcf6c7c08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh_runtime.c:210 #7 0x0000555556905c49 in BKE_mesh_runtime_clear_cache (mesh=mesh@entry=0x7fffcf6c7c08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh_runtime.c:72 #8 0x00005555568ecc53 in BKE_mesh_free (me=me@entry=0x7fffcf6c7c08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:464 #9 0x0000555556923c94 in BKE_object_free_derived_caches (ob=ob@entry=0x7fffe3fca408) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object.c:467 #10 0x0000555556bd5b69 in DEG::deg_restore_object_runtime (object_runtime_backup=0x7fffffffd8a0, object=0x7fffe3fca408) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:851 #11 DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffe3fb9b08, id_node=0x7fffd84eae88) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:956 #12 0x0000555556bd4536 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (__args#0=<optimized out>, this=0x7fffd84eac00) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:682 #13 DEG::deg_task_run_func (pool=0x7fffcc3b6008, taskdata=0x7fffd84eab88, thread_id=0) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88 #14 0x0000555556bb5d74 in handle_local_queue (thread_id=0, tls=0x7fffd8677018) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417 - 15 BLI_task_pool_work_and_wait (pool=0x7fffcc3b6008) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:904 - 16 0x0000555556bb5e39 in BLI_task_pool_work_wait_and_reset (pool=pool@entry=0x7fffcc3b6008) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:925 #17 0x0000555556bd47ab in DEG::deg_evaluate_on_refresh (graph=graph@entry=0x7fffe3fb9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:317 #18 0x0000555556bc0bc8 in DEG_evaluate_on_refresh (graph=graph@entry=0x7fffe3fb9b08) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:63 #19 0x000055555696b277 in BKE_scene_graph_update_tagged (depsgraph=depsgraph@entry=0x7fffe3fb9b08, bmain=bmain@entry=0x7fffe9fed608) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1497 #20 0x000055555610d7d8 in wm_event_do_depsgraph (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:341 #21 0x000055555610d875 in wm_event_do_refresh_wm_and_depsgraph (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:366 #22 0x000055555611422a in wm_event_do_notifiers (C=C@entry=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:524 - 23 0x000055555610a1b8 in WM_main (C=0x7fffea058188) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:421 - 24 0x00005555560f4d33 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```
Sergey Sharybin removed their assignment 2019-02-22 14:02:51 +01:00
Clément Foucault was assigned by Sergey Sharybin 2019-02-22 14:02:51 +01:00

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey

The crash got fixed in 947d78b00b.

However, i've got the following assert:

BLI_assert failed: /home/sergey/Developer/blender/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:3966, DRW_mesh_batch_cache_get_surface_shaded(), at 'gpumat_array_len == cache->mat_len'

@fclem, is it something up to you, or something up to me (if the latter, tell me what :) ?

The crash got fixed in 947d78b00b. However, i've got the following assert: ``` BLI_assert failed: /home/sergey/Developer/blender/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:3966, DRW_mesh_batch_cache_get_surface_shaded(), at 'gpumat_array_len == cache->mat_len' ``` @fclem, is it something up to you, or something up to me (if the latter, tell me what :) ?

This is because the draw engine request a different number of materials compared to what the draw cache contains.

I think (but might be mistaken) that has something to do with a missing clear of the batch cache.

If the number of material slot changes the mesh cache should be cleared.

This is because the draw engine request a different number of materials compared to what the draw cache contains. I think (but might be mistaken) that has something to do with a missing clear of the batch cache. If the number of material slot changes the mesh cache should be cleared.

@fclem, but if you open the attached file and go to sculpt mode you'll have the same assert. And that assert will not happen if you remove multires modifier.

Not sure why multires is so special and needs extra care about the batch cache.

untitled.blend

@fclem, but if you open the attached file and go to sculpt mode you'll have the same assert. And that assert will not happen if you remove multires modifier. Not sure why multires is so special and needs extra care about the batch cache. [untitled.blend](https://archive.blender.org/developer/F6686909/untitled.blend)

Ok I found the issue. It was in eevee's code.

Ok I found the issue. It was in eevee's code.

This issue was referenced by 0ca623362d

This issue was referenced by 0ca623362d5e955f051c6cc5cdd69925248e7f76

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61837
No description provided.