Fix T61837: Assert in Eevee multiresolution modfier in sculpt mode

Note that this commit remove the support (that was not really working)
for shadows in sculpt mode.